[tool.poetry]
name = "coronavirus"
version = "0.1.0"
description = ""
authors = ["Michel Albert <michel@albert.lu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.8.2"
pandas = "^1.0.3"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
